src/main/java/com/example/solid/openClosed/example1/bad/Rectangle.java
package com.example.solid.openClosed.example1.bad;

public class Rectangle {
    private Double height;
    private Double length;

    public Double getHeight() {
        return height;
    }

    public void setHeight(Double height) {
        this.height = height;
    }

    public Double getLength() {
        return length;
    }

    public void setLength(Double length) {
        this.length = length;
    }
}
